<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/account_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/space_s"
        android:paddingRight="@dimen/space_s">

        <ImageButton
            android:id="@+id/account_back"
            style="@style/Widget.BlazeMuzix.IconButton"
            android:layout_width="@dimen/touch_target"
            android:layout_height="@dimen/touch_target"
            android:contentDescription="@string/action_back"
            app:srcCompat="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_account"
            android:textAppearance="@style/TextAppearance.BlazeMuzix.Title" />

        <ImageButton
            android:id="@+id/account_settings"
            style="@style/Widget.BlazeMuzix.IconButton"
            android:layout_width="@dimen/touch_target"
            android:layout_height="@dimen/touch_target"
            android:contentDescription="@string/title_settings"
            app:srcCompat="@drawable/ic_settings" />
    </LinearLayout>

    <ImageView
        android:id="@+id/account_photo"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/space_l"
        android:contentDescription="@string/cd_account_photo"
        app:srcCompat="@drawable/ic_person" />

    <TextView
        android:id="@+id/account_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_m"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.BlazeMuzix.Title" />

    <TextView
        android:id="@+id/account_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.BlazeMuzix.Caption"
        android:textColor="?android:attr/textColorSecondary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_xl"
        android:layout_marginTop="@dimen/space_xl"
        android:layout_marginRight="@dimen/space_xl"
        android:text="@string/provider_google"
        android:textAppearance="@style/TextAppearance.BlazeMuzix.Subtitle" />

    <TextView
        android:id="@+id/account_google_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_xl"
        android:layout_marginRight="@dimen/space_xl"
        android:textAppearance="@style/TextAppearance.BlazeMuzix.Caption" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_xl"
        android:layout_marginTop="@dimen/space_l"
        android:layout_marginRight="@dimen/space_xl"
        android:text="@string/provider_spotify"
        android:textAppearance="@style/TextAppearance.BlazeMuzix.Subtitle" />

    <TextView
        android:id="@+id/account_spotify_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_xl"
        android:layout_marginRight="@dimen/space_xl"
        android:textAppearance="@style/TextAppearance.BlazeMuzix.Caption" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/account_spotify"
        style="@style/Widget.BlazeMuzix.Button.Tonal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_xl"
        android:layout_marginTop="@dimen/space_m"
        android:layout_marginRight="@dimen/space_xl"
        android:text="@string/auth_spotify_sign_in" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/account_sign_in"
        style="@style/Widget.BlazeMuzix.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_xl"
        android:layout_marginTop="@dimen/space_l"
        android:layout_marginRight="@dimen/space_xl"
        android:text="@string/auth_sign_in" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/account_sign_out"
        style="@style/Widget.BlazeMuzix.Button.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_xl"
        android:layout_marginTop="@dimen/space_s"
        android:layout_marginRight="@dimen/space_xl"
        android:text="@string/auth_sign_out"
        android:visibility="gone" />
</LinearLayout>
