<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/upload_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/space_xl"
        android:paddingRight="@dimen/space_xl"
        android:paddingBottom="@dimen/space_xl">

        <ImageButton
            android:id="@+id/upload_back"
            style="@style/Widget.BlazeMuzix.IconButton"
            android:layout_width="@dimen/touch_target"
            android:layout_height="@dimen/touch_target"
            android:layout_marginTop="@dimen/space_m"
            android:contentDescription="@string/action_back"
            app:srcCompat="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_title"
            android:textAppearance="@style/TextAppearance.BlazeMuzix.Headline" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_s"
            android:text="@string/upload_rights"
            android:textAppearance="@style/TextAppearance.BlazeMuzix.Caption" />

        <TextView
            android:id="@+id/upload_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_m"
            android:textColor="@color/bm_error"
            android:textAppearance="@style/TextAppearance.BlazeMuzix.Caption"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/upload_cover"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/space_l"
            android:contentDescription="@string/upload_pick_cover"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_album" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/upload_pick_cover"
            style="@style/Widget.BlazeMuzix.Button.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/upload_pick_cover" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/upload_pick_audio"
            style="@style/Widget.BlazeMuzix.Button.Tonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_pick_audio" />

        <TextView
            android:id="@+id/upload_file_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_s"
            android:textAppearance="@style/TextAppearance.BlazeMuzix.Caption" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_m"
            android:hint="@string/upload_track_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/upload_title_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_m"
            android:hint="@string/upload_artist">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/upload_artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_m"
            android:hint="@string/upload_album">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/upload_album"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_m"
            android:hint="@string/upload_genre">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/upload_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_m"
            android:hint="@string/upload_year">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/upload_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_m"
            android:hint="@string/upload_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/upload_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:minLines="3" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/upload_private"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_s"
            android:text="@string/upload_private" />

        <ProgressBar
            android:id="@+id/upload_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_m"
            android:max="100"
            android:visibility="gone" />

        <TextView
            android:id="@+id/upload_percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.BlazeMuzix.Caption"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/upload_submit"
            style="@style/Widget.BlazeMuzix.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_m"
            android:text="@string/upload_action" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/upload_cancel"
            style="@style/Widget.BlazeMuzix.Button.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_cancel"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>
