<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/welcome_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/space_xl"
    android:paddingRight="@dimen/space_xl">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ImageView
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/ic_brand_mark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_l"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.BlazeMuzix.Headline" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_s"
        android:gravity="center"
        android:text="@string/welcome_tagline"
        android:textAppearance="@style/TextAppearance.BlazeMuzix.Body"
        android:textColor="?android:attr/textColorSecondary" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/welcome_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_m"
        android:textAppearance="@style/TextAppearance.BlazeMuzix.Caption"
        android:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/welcome_google"
        style="@style/Widget.BlazeMuzix.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auth_continue_google"
        app:icon="@drawable/ic_person"
        app:iconGravity="textStart" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/welcome_skip"
        style="@style/Widget.BlazeMuzix.Button.Tonal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_s"
        android:text="@string/auth_skip" />

    <TextView
        android:id="@+id/welcome_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_l"
        android:layout_marginBottom="@dimen/space_xl"
        android:padding="@dimen/space_s"
        android:text="@string/auth_create_account"
        android:textAppearance="@style/TextAppearance.BlazeMuzix.Body"
        android:textColor="?attr/colorPrimary" />
</LinearLayout>
